# OpSy

./: .gitattributes  .gitignore  Callback.hpp  ConditionVariable.cpp  ConditionVariable.hpp  Config.hpp  CortexM.hpp  CriticalSection.cpp  CriticalSection.hpp  EmbeddedList.hpp  Hooks.hpp  IsrPriority.hpp  LICENSE  PriorityMutex.cpp  PriorityMutex.hpp  README.md  Scheduler.cpp  Scheduler.hpp  Scheduler_inl.hpp  Task.cpp  Task.hpp  callback.hpp  condition_variable.hpp  config.hpp  cortex_m.hpp  critical_section.hpp  embedded_list.hpp  hooks.hpp  isr_priority.hpp  opsy.hpp  opsy_assert.hpp  priority_mutex.hpp  scheduler.cpp  scheduler.hpp  scheduler_inl.hpp  task.hpp
.github/workflows/: ci.yml
algorithms/: README.md  ellipsoid_fit.hpp  triad.hpp
src/: Callback.hpp  ConditionVariable.hpp  Config.hpp  CortexM.hpp  CriticalSection.hpp  EmbeddedList.hpp  Hooks.hpp  IsrPriority.hpp  PriorityMutex.cpp  PriorityMutex.hpp  Scheduler.cpp  Scheduler.hpp  Task.cpp  Task.hpp  opsy.hpp
tests/: CMakeLists.txt  README.md  cortex-m-toolchain.cmake  sanity.cpp  utility_sanity.cpp
utility/: README.md  allocator.hpp  biquad.hpp  interrupt_vector.hpp  matrix.hpp  memory.hpp  quaternion.hpp  slope.hpp  vector.hpp
